--- a/Products_management/public/style.css
+++ b/Products_management/public/style.css
@@ -3,19 +3,14 @@
     padding: 0;
 }
 .con {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 35px;
-    padding: 60px;
-    margin-left: 100px;
-    overflow: scroll;
+    display: inline;
 }
 @media only screen and (min-width: 700px) {
     .con {
         margin: auto;
         display: grid;
         grid-template-columns: repeat(8, 1fr);
-        gap: 35px;
+        gap: 0px;
         padding: 60px;
         overflow: scroll;
     }
